--- a/MP/Views/Home/TripContent.cshtml
+++ b/MP/Views/Home/TripContent.cshtml
@@ -84,9 +84,7 @@
                     </div>
                 </div>
             </div>
-            <div id="printScreenContent" class="container">
-                <div class="row">
-                    <input type="hidden" id="tripName" value="@tripName" />
+            <div id="printScreenContent" class="row">
                     <div class="col-md-8 padding-5px" id="departureInfoLabel">
                     </div>
                     <div class="col-md-6 padding-5px">
@@ -101,9 +99,6 @@
                             <span class="seat-number-1"></span>
                         </a>
                     </div>
-                </div>
-
-                <div class="row">
                     <div class="col-md-3 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="2" data-target="#tripContentModal">
                             <span class="label label-default">2</span>
@@ -128,9 +123,6 @@
                             <span class="seat-number-5"></span>
                         </a>
                     </div>
-                </div>
-
-                <div class="row">
                     <div class="col-md-3 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="6" data-target="#tripContentModal">
                             <span class="label label-default">6</span>
@@ -155,9 +147,6 @@
                             <span></span>
                         </div>
                     </div>
-                </div>
-                
-                <div class="row">
                     <div class="col-md-3 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="9" data-target="#tripContentModal">
                             <span class="label label-default">9</span>
@@ -182,9 +171,6 @@
                             <span class="seat-number-12"></span>
                         </a>
                     </div>
-                </div>
-                
-                <div class="row">
                     <div class="col-md-3 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="13" data-target="#tripContentModal">
                             <span class="label label-default">13</span>
@@ -209,9 +195,6 @@
                             <span class="seat-number-16"></span>
                         </a>
                     </div>
-                </div>
-                
-                <div class="row">
                     <div class="col-md-3 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="17" data-target="#tripContentModal">
                             <span class="label label-default">17</span>
@@ -236,9 +219,6 @@
                             <span class="seat-number-20"></span>
                         </a>
                     </div>
-                </div>
-                
-                <div class="row">
                     <div class="col-md-3 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="21" data-target="#tripContentModal">
                             <span class="label label-default">21</span>
@@ -263,9 +243,6 @@
                             <span class="seat-number-24"></span>
                         </a>
                     </div>
-                </div>
-                
-                <div class="row">
                     <div class="col-md-3 padding-5px">
                         <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="25" data-target="#tripContentModal">
                             <span class="label label-default">25</span>
@@ -292,9 +269,30 @@
                     </div>
                 </div>
             </div>
-        </div>
         <div class="tab-pane" id="item">
-            @Model.TripName 1
+            <div class="row">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <input type="text" id="fromDateDatePicker" value="@String.Format("{0:dd/MM/yyyy}", DateTime.Now)" />
+                        <input type="text" id="toDateDatePicker" value="@String.Format("{0:dd/MM/yyyy}", DateTime.Now)" />
+                        <select class="form-control select-time" id="fromTime">
+                            @foreach (var item in selectList)
+                            {
+                                <option value="@item.Value">@item.Text</option>
+                            }
+                        </select>
+                        <select class="form-control select-time" id="toTime">
+                            @foreach (var item in selectList)
+                            {
+                                <option value="@item.Value">@item.Text</option>
+                            }
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div id="itemGrid"></div>
+            </div>
         </div>
     </div>
 </div>
@@ -309,6 +307,7 @@
             </div>
             <div class="modal-body">
                 <form class="form-horizontal" role="form">
+                    <input type="hidden" id="TripName" name="TripName" text="@tripName" value="@Model.TripName" />
                     <input type="hidden" id="Id" name="Id"/>
                     <div class="form-group">
                         <label for="Name" class="col-sm-3 control-label">Tên hành khách</label>
@@ -387,6 +386,16 @@
                 <h4 class="modal-title" id="passengerListLabel">Danh sách hành khách</h4>
             </div>
             <div class="modal-body">
+                <div class="input-group btn-group margin-bottom-10px">
+                    <span class="input-group-addon"><b>Chọn khu vực</b></span>
+                    <select id="selectTown" multiple="multiple">
+                        @foreach (var item in townSelectList)
+                        {
+                            <option value="@item.Value">@item.Text</option>
+                        }
+                    </select>
+                    <button type="button" class="btn btn-primary" id="filterTown">Tìm</button>
+                </div>
                 <div id="passengerGrid"></div>
             </div>
             <div class="modal-footer">
