--- a/MP/Views/Home/Index.cshtml
+++ b/MP/Views/Home/Index.cshtml
@@ -2,32 +2,43 @@
     ViewBag.Title = "Home Page";
 }
 <div class="row">
-    <div class="tabbable">
-        <ul class="nav nav-tabs nav-justified">
-            <li class="active"><a href="#passenger" data-toggle="tab">Hành Khách</a></li>
-            <li><a href="#item" data-toggle="tab">Hàng Hóa</a></li>
-        </ul>
-        <div class="tab-content col-md-12">
-            <div class="tab-pane active" id="passenger">
-                <div class="row">
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-default">Hôm nay</button>
-                                <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-left"></span></button>
-                                <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-arrow-right"></span></button>
-                            </div>
-                            <input type="text" class="datepicker" value="@String.Format("{0:dd/MM/yyyy}", DateTime.Now)" />
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-6">Tài xế</div>
-                    <div class="col-md-6">1</div>
+<div class="col-md-3">
+    </div>
+    <div class="col-md-6">
+        <form class="form-horizontal" role="form" id="loginForm">
+            <div class="form-group">
+                <label for="username" class="col-sm-2 control-label">Tên đăng nhập</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Tên đăng nhập">
                 </div>
             </div>
-            <div class="tab-pane" id="item">
+            <div class="form-group">
+                <label for="password" class="col-sm-2 control-label">Password</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Mật khẩu">
+                </div>
             </div>
-        </div>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="button" class="btn btn-default" id="submitLogin">Đăng nhập</button>
+                </div>
+            </div>
+        </form>
+    </div>
+    <div class="col-md-3">
     </div>
 </div>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $("#submitLogin").on("click", function() {
+            $.post('/Home/Login', $('form').serialize()).done(function (result) {
+                if (result) {
+                    getPassenger();
+                    $('#tripContentModal').modal("hide");
+                } else {
+                    $('#tripContentModal').modal("show");
+                }
+            });
+        });
+    });
+</script>
