--- a/MP/Views/Home/TripContent.cshtml
+++ b/MP/Views/Home/TripContent.cshtml
@@ -287,6 +287,7 @@
                                 <option value="@item.Value">@item.Text</option>
                             }
                         </select>
+                        <button type="button" class="btn btn-default" id="showAllItems">Xem tất cả</button>
                     </div>
                 </div>
             </div>
