--- a/MP/Views/Shared/_Layout.cshtml
+++ b/MP/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using MP.Model.Models
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -8,6 +9,23 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    <header class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <a href="../" class="navbar-brand">Minh Phán</a>
+            </div>
+            <nav class="collapse navbar-collapse" role="navigation">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="@Url.Action("TripContent", "Home", new { tripname = "ma" })">Mỹ An - Sài Gòn</a>
+                    </li>
+                    <li>
+                        <a href="@Url.Action("TripContent", "Home", new { tripname = "sg" })">Sài Gòn - Mỹ An</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <div class="container body-content">
         @RenderBody()
         <hr />
