--- a/MP/Content/Site.css
+++ b/MP/Content/Site.css
@@ -25,7 +25,7 @@ textarea {
     display: none;
 }
 
-input.input-validation-error {
+input.input-validation-error, input.error, textarea.error {
     border: 1px solid #b94a48;
 }
 
@@ -33,7 +33,7 @@ input[type="checkbox"].input-validation-error {
     border: 0 none;
 }
 
-.validation-summary-errors {
+.validation-summary-errors, .error {
     color: #b94a48;
 }
 
