--- a/MP/Views/Home/TripContent.cshtml
+++ b/MP/Views/Home/TripContent.cshtml
@@ -95,49 +95,49 @@
                         </div>
                     </div>
                     <div class="col-md-6 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="1" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="1" data-target="#tripContentModal">
                             <span class="label label-default">1</span>
                             <span class="seat-number-1"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="2" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="2" data-target="#tripContentModal">
                             <span class="label label-default">2</span>
                             <span class="seat-number-2"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="3" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="3" data-target="#tripContentModal">
                             <span class="label label-default">3</span>
                             <span class="seat-number-3"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="4" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="4" data-target="#tripContentModal">
                             <span class="label label-default">4</span>
                             <span class="seat-number-4"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="5" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="5" data-target="#tripContentModal">
                             <span class="label label-default">5</span>
                             <span class="seat-number-5"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="6" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="6" data-target="#tripContentModal">
                             <span class="label label-default">6</span>
                             <span class="seat-number-6"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="7" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="7" data-target="#tripContentModal">
                             <span class="label label-default">7</span>
                             <span class="seat-number-7"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="8" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="8" data-target="#tripContentModal">
                             <span class="label label-default">8</span>
                             <span class="seat-number-8"></span>
                         </a>
@@ -149,121 +149,121 @@
                         </div>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="9" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="9" data-target="#tripContentModal">
                             <span class="label label-default">9</span>
                             <span class="seat-number-9"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="10" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="10" data-target="#tripContentModal">
                             <span class="label label-default">10</span>
                             <span class="seat-number-10"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="11" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="11" data-target="#tripContentModal">
                             <span class="label label-default">11</span>
                             <span class="seat-number-11"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="12" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="12" data-target="#tripContentModal">
                             <span class="label label-default">12</span>
                             <span class="seat-number-12"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="13" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="13" data-target="#tripContentModal">
                             <span class="label label-default">13</span>
                             <span class="seat-number-13"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="14" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="14" data-target="#tripContentModal">
                             <span class="label label-default">14</span>
                             <span class="seat-number-14"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="15" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="15" data-target="#tripContentModal">
                             <span class="label label-default">15</span>
                             <span class="seat-number-15"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="16" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="16" data-target="#tripContentModal">
                             <span class="label label-default">16</span>
                             <span class="seat-number-16"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="17" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="17" data-target="#tripContentModal">
                             <span class="label label-default">17</span>
                             <span class="seat-number-17"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="18" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="18" data-target="#tripContentModal">
                             <span class="label label-default">18</span>
                             <span class="seat-number-18"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="19" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="19" data-target="#tripContentModal">
                             <span class="label label-default">19</span>
                             <span class="seat-number-19"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="20" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="20" data-target="#tripContentModal">
                             <span class="label label-default">20</span>
                             <span class="seat-number-20"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="21" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="21" data-target="#tripContentModal">
                             <span class="label label-default">21</span>
                             <span class="seat-number-21"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="22" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="22" data-target="#tripContentModal">
                             <span class="label label-default">22</span>
                             <span class="seat-number-22"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="23" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="23" data-target="#tripContentModal">
                             <span class="label label-default">23</span>
                             <span class="seat-number-23"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="24" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="24" data-target="#tripContentModal">
                             <span class="label label-default">24</span>
                             <span class="seat-number-24"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="25" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="25" data-target="#tripContentModal">
                             <span class="label label-default">25</span>
                             <span class="seat-number-25"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="26" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="26" data-target="#tripContentModal">
                             <span class="label label-default">26</span>
                             <span class="seat-number-26"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="27" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="27" data-target="#tripContentModal">
                             <span class="label label-default">27</span>
                             <span class="seat-number-27"></span>
                         </a>
                     </div>
                     <div class="col-md-3 padding-5px">
-                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-seat-number="28" data-target="#tripContentModal">
+                        <a href="#" class="thumbnail seat-number" data-toggle="modal" data-default-seat-number="28" data-target="#tripContentModal">
                             <span class="label label-default">28</span>
                             <span class="seat-number-28"></span>
                         </a>
@@ -337,7 +337,7 @@
                     <div class="form-group">
                         <label for="TicketQuantity" class="col-sm-3 control-label">Số lượng vé</label>
                         <div class="col-sm-9">
-                            <input type="number" class="form-control" id="TicketQuantity" name="TicketQuantity" value="1" placeholder="Số lượng vé">
+                            <input type="number" class="form-control" id="TicketQuantity" name="TicketQuantity" placeholder="Số lượng vé">
                         </div>
                     </div>
                     <div class="form-group">
@@ -397,12 +397,9 @@
                         }
                     </select>
                     <button type="button" class="btn btn-primary" id="filterTown">Tìm</button>
+                    <button type="button" class="btn btn-success" id="printScreenPassengerList">In</button>
                 </div>
                 <div id="passengerGrid"></div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
-                <button type="button" class="btn btn-primary" id="printScreenPassengerList">In</button>
             </div>
         </div>
     </div>
