--- a/MP/Views/Home/TripContent.cshtml
+++ b/MP/Views/Home/TripContent.cshtml
@@ -382,7 +382,7 @@
 </div>
 
 <div class="modal fade" id="passengerListModal" tabindex="-1" role="dialog" aria-labelledby="passengerListLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+    <div class="modal-dialog modal-xlg">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
