--- a/MP/Content/Site.css
+++ b/MP/Content/Site.css
@@ -77,3 +77,21 @@ input[type="checkbox"].input-validation-error {
 .margin-bottom-10px {
     margin-bottom: 10px;
 }
+
+#overlay {
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background: #000;
+    opacity: 0.8;
+    filter: alpha(opacity=80);
+}
+#loading {
+    height: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -28px 0 0 -25px;
+}
